fix text align + make the button easier for mobile testing

--- a/macOSNotif.css
+++ b/macOSNotif.css
@@ -30,6 +30,7 @@
 
     font-weight: 300;
     color: #444;
+    text-align: left;
     font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
 }
 
